WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109925
[WK2] Refactoring : Fix indentation and braces in WebInspectorClient.h|cpp
https://bugs.webkit.org/show_bug.cgi?id=109925
Summary
[WK2] Refactoring : Fix indentation and braces in WebInspectorClient.h|cpp
Seokju Kwon
Reported
2013-02-15 04:44:09 PST
The contents of an outermost namespace block should not be indented. And One-line control clauses should not use braces. (
http://www.webkit.org/coding/coding-style.html
)
Attachments
Patch
(2.25 KB, patch)
2013-02-15 04:46 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(2.23 KB, patch)
2013-02-15 17:50 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(2.17 KB, patch)
2013-02-28 19:59 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-02-15 04:46:41 PST
Created
attachment 188537
[details]
Patch
Build Bot
Comment 2
2013-02-15 10:10:14 PST
Comment on
attachment 188537
[details]
Patch
Attachment 188537
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16598130
New failing tests: http/tests/inspector/resource-tree/resource-request-content-while-loading.html
Seokju Kwon
Comment 3
2013-02-15 17:50:22 PST
Created
attachment 188678
[details]
Patch
Seokju Kwon
Comment 4
2013-02-28 19:59:59 PST
Created
attachment 190872
[details]
Patch
Seokju Kwon
Comment 5
2013-02-28 20:00:24 PST
Comment on
attachment 190872
[details]
Patch rebased
Seokju Kwon
Comment 6
2013-02-28 20:04:16 PST
@benjamin Could you take a loot at it? It's a simple thing.
Benjamin Poulain
Comment 7
2013-02-28 20:04:44 PST
Comment on
attachment 190872
[details]
Patch Why not.
WebKit Review Bot
Comment 8
2013-02-28 20:41:48 PST
Comment on
attachment 190872
[details]
Patch Clearing flags on attachment: 190872 Committed
r144411
: <
http://trac.webkit.org/changeset/144411
>
WebKit Review Bot
Comment 9
2013-02-28 20:41:51 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug