[WK2] Refactoring : Fix indentation and braces in WebInspectorClient.h|cpp https://bugs.webkit.org/show_bug.cgi?id=109925

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-02-28
Reviewed by Benjamin Poulain.

The contents of an outermost namespace block should not be indented.
And One-line control clauses should not use braces.

* WebProcess/WebCoreSupport/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::closeInspectorFrontend):
* WebProcess/WebCoreSupport/WebInspectorClient.h:
(WebCore):

Canonical link: https://commits.webkit.org/129482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144411 268f45cc-cd09-0410-ab3c-d52691b4dbfc