Source/WebKit2/WebProcess/WebCoreSupport/WebInspectorClient.cpp
@@ -52,9 +52,8 @@ WebCore::InspectorFrontendChannel* WebInspectorClient::openInspectorFrontend(Ins
 
 void WebInspectorClient::closeInspectorFrontend()
 {
-    if (m_page->inspector()) {
+    if (m_page->inspector())
         m_page->inspector()->didClose();
-    }
 }
 
 void WebInspectorClient::bringFrontendToFront()
